// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-AxirZ hPsuTj"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 80%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    4.2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 70%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    3.8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex overflow-hidden justify-center w-4"
              >
                <div
                  class="sc-AxirZ iQaTP p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="sc-AxhCb gSLQTX mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxhUy beRbTz current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-AxirZ hPsuTj"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 80%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    4.2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 70%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    3.8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex overflow-hidden justify-center w-4"
              >
                <div
                  class="sc-AxirZ iQaTP p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    />
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 70%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    3.8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex overflow-hidden justify-center w-4"
              >
                <div
                  class="sc-AxirZ iQaTP p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="sc-AxhCb gSLQTX mt-5"
        data-testid="Pagination"
      >
        <button
          class="sc-AxjAm dBbvQh"
          data-testid="Pagination__previous"
          type="button"
        >
          <div
            class="sc-AxirZ fttODj mr-2"
            height="10"
            width="10"
          >
            <svg>
              back.svg
            </svg>
          </div>
          Previous
        </button>
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxhUy beRbTz"
          >
            1
          </div>
          <div
            class="sc-AxhUy beRbTz current-page"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger delete 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-AxirZ hPsuTj"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 80%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    4.2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 70%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    3.8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex overflow-hidden justify-center w-4"
              >
                <div
                  class="sc-AxirZ iQaTP p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="sc-AxhCb gSLQTX mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxhUy beRbTz current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger select 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Explorer
              </div>
              <div>
                <div
                  class="sc-AxirZ hPsuTj"
                  height="16"
                  width="16"
                >
                  <svg>
                    official-ark-plugin.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 80%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    4.2
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          />
        </div>
      </div>
      <div
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="sc-AxmLO eBNjtM border-theme-primary-contrast hover:border-theme-background"
          data-testid="Card"
        >
          <div
            class="my-auto font-semibold"
          >
            <div
              class="PluginCard__PluginImageContainer-ixmao2-0 dYuRva"
            >
              <svg>
                changenow-logo.svg
              </svg>
            </div>
            <div
              class="flex items-center mb-2 space-x-2 text-lg text-theme-primary"
            >
              <div>
                ARK Avatars
              </div>
              <div>
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    grant.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="flex space-x-4 text-sm text-theme-neutral-light"
            >
              <div
                class="pr-4 border-r border-theme-neutral-300 dark:border-theme-neutral-800"
              >
                ARK.io
              </div>
              <div>
                <div
                  class="flex"
                  data-testid="ReviewRating"
                >
                  <div
                    class="relative my-auto"
                  >
                    <div
                      class="overflow-hidden absolute"
                      style="width: 70%;"
                    >
                      <svg
                        class="text-theme-warning-400 w-5"
                      >
                        star.svg
                      </svg>
                    </div>
                    <svg
                      class="text-theme-neutral w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <span
                    class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                  >
                    3.8
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="flex overflow-hidden justify-center w-4"
              >
                <div
                  class="sc-AxirZ iQaTP p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex justify-center mt-4"
    >
      <div
        class="sc-AxhCb gSLQTX mt-5"
        data-testid="Pagination"
      >
        <div
          class="flex px-2 rounded bg-theme-primary-contrast"
        >
          <div
            class="sc-AxhUy beRbTz current-page"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
